--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "axios": "^1.7.7",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
